# openai-agents-rust

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md
.factory/: init.sh  services.yaml
.factory/skills/parity-audit-worker/: SKILL.md
.factory/skills/runtime-parity-worker/: SKILL.md
.factory/skills/rust-runtime-worker/: SKILL.md
.factory/validation/audit-closure/scrutiny/: synthesis.json  synthesis.round1.json  synthesis.round2.json  synthesis.round3.json  synthesis.round7.json
.factory/validation/audit-closure/scrutiny/reviews/: fix-cloudflare-sdk-header-parity.json  fix-docs-contract-forward-slash-windows-path-detection.json  fix-docs-contract-generic-absolute-path-detection.json  fix-mcp-fresh-manager-active-set-restoration.json  fix-mcp-strict-connect-active-server-preservation.json  fix-mcp-strict-preserve-failed-active-servers.json  fix-session-input-callback-duplicate-provenance.json  fix-session-input-callback-json-identity-provenance.json  fix-session-provenance-safe-empty-object-sidecar-identity.json  fix-session-provenance-without-public-inputitem-regression.json
.factory/validation/core-runtime-parity/scrutiny/: synthesis.json  synthesis.round1.json
.factory/validation/core-runtime-parity/scrutiny/reviews/: fix-mcp-transport-client-factory-and-session-state.json  fix-openai-delta-tracking-drop-reorder-identity.json  fix-openai-delta-tracking-under-filtered-rewrites.json  fix-openai-provider-explicit-override-precedence.json  fix-openai-provider-precedence-without-api-break.json  fix-replay-overlap-with-repeated-items.json  fix-runner-filtered-replay-and-structured-max-turn-coverage.json  fix-runtime-output-schema-request-plumbing.json  fix-structured-output-max-turn-runtime-coverage.json
.factory/validation/final-audit-docs/scrutiny/: synthesis.json  synthesis.round1.json
.factory/validation/final-audit-docs/scrutiny/reviews/: finalize-facade-docs-and-readme-parity.json  refresh-ledgers-and-close-release-gate.json
.factory/validation/hosted-provider-parity/scrutiny/: synthesis.json
.factory/validation/hosted-provider-parity/scrutiny/reviews/: hosted-provider-feature-gates-and-public-exports.json  hosted-provider-mount-strategy-parity.json  hosted-provider-session-auth-and-capability-parity.json
.factory/validation/local-sandbox-mvp/scrutiny/: synthesis.round3.json
.factory/validation/local-sandbox-mvp/scrutiny/reviews/: sandbox-capability-subset-followup.json
.factory/validation/realtime-voice-parity/scrutiny/: synthesis.round1.json
.factory/validation/runtime-provider/scrutiny/: synthesis.json  synthesis.round2.json
.factory/validation/runtime-provider/scrutiny/reviews/: session-backend-local-parity.json  (+13 more)
.factory/validation/sandbox-composition/scrutiny/: synthesis.json  synthesis.round1.json
.factory/validation/sandbox-resume-state/scrutiny/: synthesis.json  synthesis.round1.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_issue.yml  feature_request.yml
.github/workflows/: ci.yml
crates/agents-core/: Cargo.toml  README.md
crates/agents-core/src/: _config.rs  _debug.rs  _mcp_tool_metadata.rs  _tool_identity.rs  agent.rs  agent_output.rs  agent_tool_input.rs  agent_tool_state.rs  errors.rs  exceptions.rs  function_schema.rs  guardrail.rs  handoff.rs  items.rs  lib.rs  lifecycle.rs  model.rs  model_settings.rs  prompts.rs  repl.rs  result.rs  retry.rs  run.rs  run_config.rs  run_context.rs  run_state.rs  session.rs  stream_events.rs  strict_schema.rs  tool.rs  tool_context.rs  tool_guardrails.rs
crates/agents-core/src/handoff/: history.rs  mod.rs
crates/agents-core/src/internal/: agent_runner_helpers.rs  guardrails.rs  items.rs  mod.rs  oai_conversation.rs  session_persistence.rs  streaming.rs  tool_execution.rs  tool_use_tracker.rs  turn_preparation.rs  turn_resolution.rs
crates/agents-core/src/mcp/: manager.rs  mod.rs  server.rs  util.rs
crates/agents-core/src/memory/: mod.rs  session.rs  session_settings.rs  sqlite_session.rs  util.rs
crates/agents-core/src/models/: interface.rs  mod.rs  multi_provider.rs
crates/agents-core/src/sandbox/: mod.rs
crates/agents-core/src/tracing/: config.rs  context.rs  create.rs  logger.rs  mod.rs  model_tracing.rs  processor_interface.rs  processors.rs  provider.rs  scope.rs  setup.rs  span_data.rs  spans.rs  traces.rs  util.rs
crates/agents-core/tests/: mcp_discovered_tools_preserve_required_inputs_and_approval.rs  reasoning_item_id_policy_resume.rs  run_sync_semantics.rs  session_conversation_semantics.rs
crates/agents-extensions/: Cargo.toml  README.md
crates/agents-extensions/src/: lib.rs
crates/agents-extensions/src/extensions/: handoff_filters.rs  realtime_transports.rs  tool_output_trimmer.rs
crates/agents-extensions/src/memory/: encrypted_session.rs
crates/agents-extensions/src/sandbox/: __init__.rs
crates/agents-openai/: Cargo.toml  README.md
crates/agents-openai/src/: defaults.rs  lib.rs  memory.rs  models.rs  provider.rs  tools.rs  websocket.rs
crates/agents-openai/src/models/: chatcmpl_helpers.rs
crates/agents-openai/tests/: harness_registration_metadata_follows_override_rules.rs
crates/agents-realtime/: Cargo.toml
crates/agents-realtime/src/: audio_formats.rs  config.rs  events.rs  lib.rs  model.rs  openai_realtime.rs  runner.rs  session.rs
crates/agents-voice/: Cargo.toml  README.md
crates/agents-voice/src/: events.rs  lib.rs  pipeline.rs  result.rs  workflow.rs
crates/openai-agents/: Cargo.toml  README.md
crates/openai-agents/src/: lib.rs
crates/openai-agents/tests/: behavior_parity.rs  docs_contract.rs  extensions_semantics.rs  hosted_tool_helpers_semantics.rs  mcp_semantics.rs  openai_session_semantics.rs  realtime_semantics.rs  root_export_parity.rs  runner_semantics.rs  sandbox_hosted_provider_semantics.rs  sandbox_semantics.rs  voice_semantics.rs
docs/: BEHAVIOR_PARITY.md  PORTING_MATRIX.md  PORTING_PI_ID.md  ROOT_EXPORT_PARITY.md  behavior_parity_overrides.json
scripts/: generate_behavior_parity.py
(+6 files in other folders)
