[workspace]
members = [
    "crates/agents-core",
    "crates/agents-openai",
    "crates/agents-realtime",
    "crates/agents-voice",
    "crates/agents-extensions",
    "crates/openai-agents",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
version = "0.1.2"
authors = ["Chaitanya Mishra <233810408+staticpayload@users.noreply.github.com>"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
futures = "0.3.32"
log = "0.4.28"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
rmcp = "1.3.0"
schemars = { version = "1.0.4", features = ["derive", "uuid1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["json", "macros", "postgres", "runtime-tokio-rustls", "sqlite"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-rusqlite = "0.7.0"
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
redis = { version = "1.1.0", features = ["aio", "tokio-comp"] }
