[package]
name = "openai-agents-core-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Core runtime primitives for openai-agents-rust."
repository = "https://github.com/scalarian/openai-agents-rust"
homepage = "https://github.com/scalarian/openai-agents-rust"
documentation = "https://docs.rs/openai-agents-core-rs"
readme = "README.md"
keywords = ["agents", "openai", "llm", "runtime", "mcp"]
categories = ["asynchronous", "api-bindings", "development-tools"]

[lib]
name = "agents_core"

[dependencies]
async-trait.workspace = true
futures.workspace = true
log.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
