[package]
name = "openai-agents-extensions-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Optional transports, adapters, memory backends, and integrations for openai-agents-rust."
repository = "https://github.com/scalarian/openai-agents-rust"
homepage = "https://github.com/scalarian/openai-agents-rust"
documentation = "https://docs.rs/openai-agents-extensions-rs"
readme = "README.md"
keywords = ["agents", "openai", "extensions", "realtime", "integrations"]
categories = ["asynchronous", "api-bindings", "development-tools"]

[lib]
name = "agents_extensions"

[dependencies]
agents-core = { package = "openai-agents-core-rs", version = "0.1.2", path = "../agents-core" }
agents-openai = { package = "openai-agents-openai-rs", version = "0.1.2", path = "../agents-openai" }
agents-realtime = { package = "openai-agents-realtime-rs", version = "0.1.2", path = "../agents-realtime" }
async-trait.workspace = true
base64.workspace = true
redis.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
