[package]
name = "openai-agents-openai-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "OpenAI provider, models, sessions, and hosted tools for openai-agents-rust."
repository = "https://github.com/scalarian/openai-agents-rust"
homepage = "https://github.com/scalarian/openai-agents-rust"
documentation = "https://docs.rs/openai-agents-openai-rs"
readme = "README.md"
keywords = ["agents", "openai", "responses", "chat-completions", "mcp"]
categories = ["asynchronous", "api-bindings", "development-tools"]

[lib]
name = "agents_openai"

[dependencies]
agents-core = { package = "openai-agents-core-rs", version = "0.1.2", path = "../agents-core" }
async-trait.workspace = true
futures.workspace = true
once_cell.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
uuid.workspace = true
