[package]
name = "openai-agents-realtime-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Realtime runtime, sessions, and event models for openai-agents-rust."
repository = "https://github.com/scalarian/openai-agents-rust"
homepage = "https://github.com/scalarian/openai-agents-rust"
documentation = "https://docs.rs/openai-agents-realtime-rs"
readme = "README.md"
keywords = ["agents", "openai", "realtime", "audio", "streaming"]
categories = ["asynchronous", "api-bindings", "development-tools"]

[lib]
name = "agents_realtime"

[dependencies]
agents-core = { package = "openai-agents-core-rs", version = "0.1.2", path = "../agents-core" }
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
