[package]
name = "openai-agents-voice-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Voice workflow, STT, and TTS pipeline primitives for openai-agents-rust."
repository = "https://github.com/scalarian/openai-agents-rust"
homepage = "https://github.com/scalarian/openai-agents-rust"
documentation = "https://docs.rs/openai-agents-voice-rs"
readme = "README.md"
keywords = ["agents", "openai", "voice", "stt", "tts"]
categories = ["asynchronous", "api-bindings", "development-tools"]

[lib]
name = "agents_voice"

[dependencies]
agents-core = { package = "openai-agents-core-rs", version = "0.1.2", path = "../agents-core" }
agents-openai = { package = "openai-agents-openai-rs", version = "0.1.2", path = "../agents-openai" }
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
