[package]
name = "openai-agents-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Rust-native agents runtime with OpenAI, MCP, realtime, voice, and extensions."
repository = "https://github.com/scalarian/openai-agents-rust"
homepage = "https://github.com/scalarian/openai-agents-rust"
documentation = "https://docs.rs/openai-agents-rs"
readme = "README.md"
keywords = ["agents", "openai", "llm", "realtime", "mcp"]
categories = ["asynchronous", "api-bindings", "development-tools"]

[lib]
name = "openai_agents"

[dependencies]
agents-core = { package = "openai-agents-core-rs", version = "0.1.2", path = "../agents-core" }
agents-extensions = { package = "openai-agents-extensions-rs", version = "0.1.2", path = "../agents-extensions" }
agents-openai = { package = "openai-agents-openai-rs", version = "0.1.2", path = "../agents-openai" }
agents-realtime = { package = "openai-agents-realtime-rs", version = "0.1.2", path = "../agents-realtime" }
agents-voice = { package = "openai-agents-voice-rs", version = "0.1.2", path = "../agents-voice" }
tokio.workspace = true

[dev-dependencies]
async-trait.workspace = true
futures.workspace = true
serde_json.workspace = true
